# aimo

./: .gitignore  README.md  pyproject.toml
aimo/: __init__.py  __init__.pyi  data.py  models.py
scripts/: generate_stubs.py
tests/: test_aimo.py
