[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimo-registry"
version = "0.1.0"
description = "Smart AI model registry with hierarchical access and rich metadata"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Maxime Rivest", email = "mrive052@gmail.com"}
]
keywords = ["ai", "llm", "models", "registry", "litellm", "dspy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "twine", "build"]

[project.urls]
Homepage = "https://github.com/MaximeRivest/aimo"
Repository = "https://github.com/MaximeRivest/aimo"
Issues = "https://github.com/MaximeRivest/aimo/issues"

[tool.hatch.build.targets.wheel]
packages = ["aimo"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
